2008-01-22  Zach Lute <zach.lute@gmail.com> 

	* MonoDevelop.Ide.Gui/IdeStartup.cs: Added --newwindow option to force MD to
	  open a new instance instead of passing to a running one.  This option is
	  forced if opening a combine from the commandline. (Bug #350361)

2008-01-22  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.addin.xml: Use GTK fullscreen icon (was added in 2.8).

2008-01-22  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Gui/Ide.cs: Force resource service to load so that it
	  registers GTK stock icons before the IDE loads. Fixes "Bug 353157 - Many
	  toolbar icons aren't showing up".

2008-01-22  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs: Grammar fix.

2008-01-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Dialogs/NewFileDialog.cs: If a project is selected in
	  the solution tree, activate the 'add to project' option by default.
	* MonoDevelop.Ide.Gui/DefaultWorkbench.cs: Added missing null check.

2008-01-20  Ankit Jain  <jankit@novell.com>

	* templates/EmptyXMLFile.xft.xml:
	* templates/EmptyTextFile.xft.xml: Set BuildAction to Nothing.

2008-01-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui/DefaultWorkbench.cs: Dispose the command manager when
	  closing MD. Should fix bug #349484.

2008-01-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.mdp, gtk-gui/gui.stetic,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.EncapsulateFieldDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewFileDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewProjectDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.ReplaceDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.SelectReferenceDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.TasksPanelWidget.cs: Updated.

2008-01-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/DefaultMonitorPad.cs: Queue.Peek returns the head